# secp256k1-sp1-v6-sample

./: .gitignore  Cargo.toml  README.md
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
