[package]
version = "0.1.0"
name = "secp256k1-script"
edition = "2021"
default-run = "secp256k1-script"

[[bin]]
name = "secp256k1-script"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
bincode = "1.3.3"
secp256k1 = { workspace = true, features = ["hashes", "rand"] }

[build-dependencies]
sp1-build = { version = "6.0.1" }
